Disallow failing config/controller(hosts)